--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello, world!
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <title>Анечка любимая!</title>
+</head>
+  
+hello, world!give up
